--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-auth": "^5.0.0-beta.29",
+    "openai": "^6.8.0",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-is": "^19.1.1",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.1"
   },
